# rtf2htmlv2

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  needed_dlls.txt  push_to_github.bat  rtf2html.bat
.github/workflows/: build-lo-minimal.yml
build-minimal-lo/: README.md  autogen-windows.input  autogen.input  build-ubuntu.sh  build-windows.sh  patch-mergelibs-minimal.diff  rtf2html-lokit.cpp  setup-cygwin.ps1
src/: rtf2html.cpp
